tests/baselines/reference/staticMethodReferencingTypeArgument1.errors.txt
staticMethodReferencingTypeArgument1.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
staticMethodReferencingTypeArgument1.ts(9,33): error TS2302: Static members cannot reference class type parameters.
staticMethodReferencingTypeArgument1.ts(10,29): error TS2302: Static members cannot reference class type parameters.
staticMethodReferencingTypeArgument1.ts(10,43): error TS2302: Static members cannot reference class type parameters.


==== staticMethodReferencingTypeArgument1.ts (4 errors) ====
    module Editor {
           ~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class List<T> {
            next: List<T>;
            prev: List<T>;
    
            constructor(public isHead: boolean, public data: T) {
            }
    
            static MakeHead(): List<T> {
                                    ~
!!! error TS2302: Static members cannot reference class type parameters.
                var entry: List<T> = new List<T>(true, null); // can't access T here
                                ~
!!! error TS2302: Static members cannot reference class type parameters.
                                              ~
!!! error TS2302: Static members cannot reference class type parameters.
                entry.prev = entry;
                entry.next = entry;
                return entry;
            }
        }
    }